--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -14,6 +14,7 @@
     "@sanity/client": "^6.22.5",
     "@sanity/image-url": "^1.1.0",
     "@sanity/uuid": "^3.0.2",
+    "@swup/fade-theme": "^2.0.1",
     "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.12",
@@ -22,6 +23,7 @@
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.5.0",
     "next": "^15.0.4",
     "next-sanity": "^9.8.18",
     "postcss": "^8.4.49",
@@ -30,6 +32,7 @@
     "sanity": "^3.65.0",
     "sonner": "^1.7.0",
     "styled-components": "^6.1.13",
+    "swup": "^4.8.1",
     "tailwindcss": "^3.4.15",
     "typescript": "5.6.3"
   },
