--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -33,6 +33,7 @@
     "sonner": "^1.7.0",
     "styled-components": "^6.1.13",
     "swup": "^4.8.1",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.15",
     "typescript": "5.6.3"
   },
